[gd_scene load_steps=11 format=3 uid="uid://ykuou1deo5ub"]

[ext_resource type="Script" path="res://addons/guide/ui/renderers/touch/touch_renderer.gd" id="1_heixj"]
[ext_resource type="Texture2D" uid="uid://c5nwnp5cjny7m" path="res://addons/guide/ui/renderers/touch/icons/touch_1_finger.png" id="2_4mplc"]
[ext_resource type="Texture2D" uid="uid://bllhe78a1yo6" path="res://addons/guide/ui/renderers/touch/icons/touch_2_fingers.png" id="3_0dcqu"]
[ext_resource type="Texture2D" uid="uid://bwhqf2nmm5q1w" path="res://addons/guide/ui/renderers/touch/icons/touch_3_fingers.png" id="4_mgq0v"]
[ext_resource type="Texture2D" uid="uid://cjw5m42gufghr" path="res://addons/guide/ui/renderers/touch/icons/touch_4_fingers.png" id="5_qoicp"]
[ext_resource type="Texture2D" uid="uid://bxj4t5vjx7o3w" path="res://addons/guide/ui/renderers/touch/icons/touch_rotate.png" id="6_4jaqi"]
[ext_resource type="Texture2D" uid="uid://cutplj0nhphk" path="res://addons/guide/ui/renderers/touch/icons/touch_zoom.png" id="7_gvy7l"]
[ext_resource type="Texture2D" uid="uid://bmgxqbypegjxh" path="res://addons/guide/ui/renderers/textures/arrow_horizontal.svg" id="8_m5om5"]
[ext_resource type="Texture2D" uid="uid://dwb1h8sfsccyy" path="res://addons/guide/ui/renderers/textures/arrow_all_directions.svg" id="9_5gr2q"]
[ext_resource type="Texture2D" uid="uid://bu5nlug6uf03w" path="res://addons/guide/ui/renderers/textures/arrow_vertical.svg" id="10_4vghq"]

[node name="TouchRenderer" type="MarginContainer"]
offset_right = 100.0
offset_bottom = 100.0
size_flags_horizontal = 0
script = ExtResource("1_heixj")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 0

[node name="Controls" type="MarginContainer" parent="HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 100)
layout_mode = 2

[node name="T1Finger" type="TextureRect" parent="HBoxContainer/Controls"]
unique_name_in_owner = true
visible = false
layout_mode = 2
texture = ExtResource("2_4mplc")
stretch_mode = 4

[node name="T2Fingers" type="TextureRect" parent="HBoxContainer/Controls"]
unique_name_in_owner = true
visible = false
layout_mode = 2
texture = ExtResource("3_0dcqu")
stretch_mode = 4

[node name="T3Fingers" type="TextureRect" parent="HBoxContainer/Controls"]
unique_name_in_owner = true
visible = false
layout_mode = 2
texture = ExtResource("4_mgq0v")
stretch_mode = 4

[node name="T4Fingers" type="TextureRect" parent="HBoxContainer/Controls"]
unique_name_in_owner = true
visible = false
layout_mode = 2
texture = ExtResource("5_qoicp")
stretch_mode = 4

[node name="Rotate" type="TextureRect" parent="HBoxContainer/Controls"]
unique_name_in_owner = true
visible = false
layout_mode = 2
texture = ExtResource("6_4jaqi")
stretch_mode = 4

[node name="Zoom" type="TextureRect" parent="HBoxContainer/Controls"]
unique_name_in_owner = true
visible = false
layout_mode = 2
texture = ExtResource("7_gvy7l")
stretch_mode = 4

[node name="Directions" type="MarginContainer" parent="HBoxContainer"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(100, 100)
layout_mode = 2

[node name="Horizontal" type="TextureRect" parent="HBoxContainer/Directions"]
unique_name_in_owner = true
layout_mode = 2
texture = ExtResource("8_m5om5")
stretch_mode = 4

[node name="Vertical" type="TextureRect" parent="HBoxContainer/Directions"]
unique_name_in_owner = true
layout_mode = 2
texture = ExtResource("10_4vghq")
stretch_mode = 4

[node name="Axis2D" type="TextureRect" parent="HBoxContainer/Directions"]
unique_name_in_owner = true
layout_mode = 2
texture = ExtResource("9_5gr2q")
stretch_mode = 4
